@@ -1,3 +1,4 @@
+- Improvement: Rewrite of method ExecutionCourse.getDegreePresentationString() to improve performance 
 - Fix: Creation of AcademicYearCE should always create a correspondent ExecutionYear
 
 29.0.0 (04-04-2020)
